--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,44 @@
-html,
-body {
+html{
+  font-size: 62.5%;
+  box-sizing: border-box;
+  margin: auto;
   padding: 0;
-  margin: 0;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+body {
+  font-size: 1.6rem;;
+  line-height: 1.5;
+  padding: 0;
+  margin:0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Raleway', sans-serif;
+  background-color: #eaeaea;
 }
 
-a {
-  color: inherit;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
+h1, h2, h3 {
+  font-family: 'Raleway', sans-serif;
+  margin: 0 0 2rem 0;
+  line-height: 1.5;
+}
+h1, h2 {
+  font-weight: 700;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+a{
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
